// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayResult Docker test result 1`] = `
"
Testing src...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r0 (triggers upgrades to expat@2.2.7-r0)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r0

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r1 (triggers upgrades to expat@2.2.7-r1)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r1



Organization:      gitphill
Package manager:   undefined
Docker image:      src
Licenses:          enabled

Tested 40 dependencies for known issues, found 3 issues.

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once.

Snyk wasn’t able to auto detect the base image, use \`--file\` option to get base image remediation advice.
Example: $ snyk container test src --file=path/to/Dockerfile

To remove this message in the future, please run \`snyk config set disableSuggestions=true\`"
`;

exports[`displayResult Docker test result no file path and base image auto detected 1`] = `
"
Testing src...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r0 (triggers upgrades to expat@2.2.7-r0)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r0

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r1 (triggers upgrades to expat@2.2.7-r1)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r1



Organization:      gitphill
Package manager:   undefined
Docker image:      src
Base image:        base Image
Licenses:          enabled

Tested 40 dependencies for known issues, found 3 issues.

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once."
`;

exports[`displayResult Docker test result with base image name not found warning 1`] = `
"
Testing alpine:latest...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11



Organization:      test-organization
Package manager:   apk
Target file:       Dockerfile
Project name:      alpine
Docker image:      alpine:latest
Platform:          linux/amd64
Licenses:          enabled

Tested 40 dependencies for known issues, found 1 issue.

Tip: Detected multiple supported manifests (1), use --all-projects to scan all of them at once.

Warning: Unable to analyse Dockerfile provided through \`--file\`.
         Dockerfile must begin with a FROM instruction. This may be after parser directives, comments, and globally scoped ARGs.

Pro tip: use \`--exclude-base-image-vulns\` to exclude from display Docker base image vulnerabilities.

To remove this message in the future, please run \`snyk config set disableSuggestions=true\`"
`;

exports[`displayResult Docker test result with base image non resolvable warning 1`] = `
"
Testing alpine:latest...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11



Organization:      test-organization
Package manager:   apk
Target file:       Dockerfile
Project name:      alpine
Docker image:      alpine:latest
Platform:          linux/amd64
Licenses:          enabled

Tested 40 dependencies for known issues, found 1 issue.

Tip: Detected multiple supported manifests (1), use --all-projects to scan all of them at once.

Warning: Unable to analyse Dockerfile provided through \`--file\`.
         Dockerfile must have default values for all ARG instructions.

Pro tip: use \`--exclude-base-image-vulns\` to exclude from display Docker base image vulnerabilities.

To remove this message in the future, please run \`snyk config set disableSuggestions=true\`"
`;

exports[`displayResult Docker test result with remediation advice 1`] = `
"
Testing src...

✗ High severity vulnerability found in musl
  Description: Out-of-bounds Write
  Info: [URL]
  Introduced through: meta-common-packages@meta
  From: meta-common-packages@meta > musl@1.1.19-r10
  Fixed in: 1.1.19-r11

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r0 (triggers upgrades to expat@2.2.7-r0)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r0

✗ High severity vulnerability found in expat
  Description: XML External Entity (XXE) Injection
  Info: [URL]
  Introduced through: expat@2.2.5-r0, .python-rundeps@0, git@2.18.2-r0
  From: expat@2.2.5-r0
  From: .python-rundeps@0 > expat@2.2.5-r0
  From: git@2.18.2-r0 > expat@2.2.5-r0
  Remediation:
    Upgrade direct dependency expat@2.2.5-r0 to expat@2.2.7-r1 (triggers upgrades to expat@2.2.7-r1)
    Some paths have no direct dependency upgrade that can address this issue.
  Fixed in: 2.2.7-r1



Organization:      gitphill
Package manager:   undefined
Docker image:      src
Base image:        ubuntu:20.04
Licenses:          enabled

Tested 40 dependencies for known issues, found 3 issues.

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once.

Base Image    Vulnerabilities  Severity
ubuntu:20.04  19               0 critical, 0 high, 3 medium, 16 low

Recommendations for base image upgrade:

Major upgrades
Base Image              Vulnerabilities  Severity
ubuntu:impish-20210928  13               0 critical, 0 high, 2 medium, 11 low


Learn more: [URL]"
`;

exports[`displayResult Pip result with pins 1`] = `
"
Testing src...

Tested 2 dependencies for known issues, found 32 issues, 2 vulnerable paths.

Issues to fix by upgrading dependencies:

  Upgrade django@1.6.1 to django@2.2.18 to fix
  ✗ Content Spoofing [Medium Severity][URL] in django@1.6.1
    introduced by:
    django@1.6.1


Issues with no direct upgrade or patch:
  ✗ Directory Traversal [Low Severity][URL] in django@1.6.1
    introduced by:
    django@1.6.1
  This issue was fixed in versions: 2.2.18, 3.0.12, 3.1.6



Organization:      lili
Package manager:   pip
Target file:       requirements.txt
Project name:      pip-app
Open source:       no
Project path:      src
Licenses:          enabled

Test summary:

  1 issues with no upgrade or patch
  1 fixable issues: 1 Medium

Tip: Try \`snyk fix\` to address these issues.\`snyk fix\` is a new CLI command in that aims to automatically apply the recommended updates for supported ecosystems.
See documentation on how to enable this beta feature: https://docs.snyk.io/snyk-cli/fix-vulnerabilities-from-the-cli/automatic-remediation-with-snyk-fix#enabling-snyk-fix

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once."
`;

exports[`displayResult with Upgrades & Patches 1`] = `
"
Testing src...

Tested 2 dependencies for known vulnerabilities, found 4 vulnerabilities, 4 vulnerable paths.

Issues to fix by upgrading:

  Upgrade qs@0.0.6 to qs@6.0.4 to fix
  ✗ Prototype Override Protection Bypass [Low Severity (originally High)][URL] in qs@0.0.6
    introduced by:
    qs@0.0.6
  ✗ Denial of Service (DoS) [Low Severity (originally High)][URL] in qs@0.0.6
    introduced by:
    qs@0.0.6
  ✗ Denial of Service (DoS) [Low Severity (originally Medium)][URL] in qs@0.0.6
    introduced by:
    qs@0.0.6


Patchable issues:

  Patch available for node-uuid@1.4.0
  ✗ Insecure Randomness [Low Severity (originally Medium)][URL] in node-uuid@1.4.0
    introduced by:
    node-uuid@1.4.0



Organization:      another-org
Package manager:   npm
Target file:       package-lock.json
Project name:      shallow-goof
Open source:       no
Project path:      src

Test summary:

  4 fixable issues: 4 Low

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once."
`;

exports[`displayResult with license issues 1`] = `
"
Testing src...

Tested 3 dependencies for known issues, found 6 issues, 8 vulnerable paths.

Issues to fix by upgrading:

  Upgrade rack@1.6.5 to rack@1.6.11 to fix
  ✗ Cross-site Scripting (XSS) [Medium Severity][URL] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5

  Upgrade rack-cache@1.1 to rack-cache@1.3.0 to fix
  ✗ Cross-site Scripting (XSS) [Medium Severity][URL] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5
  ✗ HTTP Header Caching Weakness [High Severity][URL] in rack-cache@1.1
    introduced by:
    rack-cache@1.1

  Upgrade rack-protection@1.5.3 to rack-protection@2.0.0 to fix
  ✗ Side-channel attack [Low Severity][URL] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3
  ✗ Timing Attack [Medium Severity][URL] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3
  ✗ Directory Traversal [Medium Severity][URL] in rack-protection@1.5.3
    introduced by:
    rack-protection@1.5.3
  ✗ Cross-site Scripting (XSS) [Medium Severity][URL] in rack@1.6.5
    introduced by:
    rack@1.6.5
    rack-cache@1.1 > rack@1.6.5
    rack-protection@1.5.3 > rack@1.6.5


License issues:

  ✗ Unknown license [High Severity][URL] in rack-cache@1.1
    introduced by:
    rack-cache@1.1
    Legal instructions:
    ○ for LGPL-3.0 license: I am legal license instruction



Organization:      lili2311
Package manager:   rubygems
Open source:       no
Project path:      src
Licenses:          enabled

Test summary:

  1 license issues: 1 High
  7 fixable issues: 1 High, 5 Medium, 1 Low

Tip: Detected multiple supported manifests (3), use --all-projects to scan all of them at once."
`;
